--- a/magic_market_mobile/pubspec.yaml
+++ b/magic_market_mobile/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   go_router: ^13.1.0
   http: ^1.1.0
   carousel_slider: ^4.2.1
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
