--- a/MagicOnlineMarketWeb/package.json
+++ b/MagicOnlineMarketWeb/package.json
@@ -16,9 +16,10 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.2.1",
         "vite": "^5.2.8",
-        "vue": "^3.4.0"
+        "vue": "^3.4.23"
     },
     "dependencies": {
-        "bootstrap": "^5.3.3"
+        "bootstrap": "^5.3.3",
+        "bootstrap-vue": "^2.23.1"
     }
 }
