--- a/MagicOnlineMarketWeb/package.json
+++ b/MagicOnlineMarketWeb/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "bootstrap": "^5.3.3",
-        "bootstrap-vue": "^2.23.1"
+        "bootstrap-vue": "^2.23.1",
+        "vue3-carousel": "^0.3.3"
     }
 }
