--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,10 @@ app.*.symbols
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 !/dev/ci/**/Gemfile.lock
 !.vscode/settings.json
+magic_market_mobile/linux/flutter/generated_plugin_registrant.cc
+magic_market_mobile/linux/flutter/generated_plugin_registrant.h
+magic_market_mobile/linux/flutter/generated_plugins.cmake
+magic_market_mobile/macos/Flutter/GeneratedPluginRegistrant.swift
+magic_market_mobile/windows/flutter/generated_plugin_registrant.cc
+magic_market_mobile/windows/flutter/generated_plugin_registrant.h
+magic_market_mobile/windows/flutter/generated_plugins.cmake
