--- a/magic_market_mobile/pubspec.yaml
+++ b/magic_market_mobile/pubspec.yaml
@@ -34,12 +34,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  go_router: ^14.1.3
+  go_router: ^14.1.4
   http: ^1.1.0
   carousel_slider: ^4.2.1
   shared_preferences: ^2.2.2
   paypal_sdk: ^1.0.8
   webview_flutter: ^3.0.4
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
